Fixed broken paths

--- a/project/Build.xml
+++ b/project/Build.xml
@@ -10,7 +10,7 @@
 
 	<files id="iphone">
 		<compilerflag value="-Iinclude"/>
-        <compilerflag value="-I../../extensionkit-0.1/project/include"/>
+        <compilerflag value="-I../../extensionkit/project/include"/>
         <file name="iphone/NativeTextIPhone.mm"/>
 	</files>
 
